--- a/index.html
+++ b/index.html
@@ -596,13 +596,14 @@
                 bodyParts.push(`${title}:\n${response}`);
             });
 
-            const subject = encodeURIComponent(`ARMOR Checklist Follow-up - ${decodeURIComponent(params.name || 'Customer')}`);
-            const body = encodeURIComponent(
+            const customerName = decodeURIComponent(params.name || 'Customer');
+            const subjectText = `ARMOR Checklist Follow-up - ${customerName}`;
+            const bodyText =
 `Hello ARMOR Team,
 
 I am providing additional information for my checklist follow-up.
 
-Customer: ${decodeURIComponent(params.name || 'Customer')} (ID: ${params.id})
+Customer: ${customerName} (ID: ${params.id})
 
 ---
 
@@ -611,10 +612,84 @@ ${bodyParts.join('\n\n---\n\n')}
 ---
 
 Thank you,
-${decodeURIComponent(params.name || 'Customer')}`
-            );
+${customerName}`;
 
-            window.location.href = `mailto:armor@phoneburner.com?subject=${subject}&body=${body}`;
+            const subject = encodeURIComponent(subjectText);
+            const body = encodeURIComponent(bodyText);
+            const mailtoUrl = `mailto:armor@phoneburner.com?subject=${subject}&body=${body}`;
+
+            // Try to open mailto
+            const mailtoWindow = window.open(mailtoUrl, '_self');
+
+            // Show fallback after a short delay (in case mailto didn't work)
+            setTimeout(() => {
+                showFallback(subjectText, bodyText);
+            }, 500);
+        }
+
+        // Show fallback copy option
+        function showFallback(subject, body) {
+            // Check if modal already exists
+            if (document.getElementById('fallbackModal')) return;
+
+            const modal = document.createElement('div');
+            modal.id = 'fallbackModal';
+            modal.innerHTML = `
+                <div style="position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 1000; display: flex; align-items: center; justify-content: center; padding: 20px;">
+                    <div style="background: white; border-radius: 16px; max-width: 600px; width: 100%; max-height: 90vh; overflow: auto; box-shadow: 0 20px 60px rgba(0,0,0,0.3);">
+                        <div style="padding: 24px; border-bottom: 1px solid #E5E7EB;">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <h3 style="margin: 0; font-size: 18px; color: #1F2937;">Email Ready to Send</h3>
+                                <button onclick="closeFallback()" style="background: none; border: none; font-size: 24px; cursor: pointer; color: #6B7280;">&times;</button>
+                            </div>
+                            <p style="margin: 8px 0 0; color: #6B7280; font-size: 14px;">Your email client should open. If not, copy the content below and send to <strong>armor@phoneburner.com</strong></p>
+                        </div>
+                        <div style="padding: 24px;">
+                            <div style="margin-bottom: 16px;">
+                                <label style="display: block; font-size: 12px; font-weight: 600; color: #6B7280; margin-bottom: 6px;">SUBJECT:</label>
+                                <input type="text" id="emailSubject" value="${subject.replace(/"/g, '&quot;')}" readonly style="width: 100%; padding: 10px 12px; border: 1px solid #E5E7EB; border-radius: 6px; font-size: 14px; background: #F9FAFB;">
+                            </div>
+                            <div style="margin-bottom: 16px;">
+                                <label style="display: block; font-size: 12px; font-weight: 600; color: #6B7280; margin-bottom: 6px;">MESSAGE:</label>
+                                <textarea id="emailBody" readonly style="width: 100%; height: 250px; padding: 12px; border: 1px solid #E5E7EB; border-radius: 6px; font-size: 13px; font-family: inherit; background: #F9FAFB; resize: none;">${body.replace(/</g, '&lt;').replace(/>/g, '&gt;')}</textarea>
+                            </div>
+                            <div style="display: flex; gap: 12px;">
+                                <button onclick="copyEmail()" style="flex: 1; background: linear-gradient(135deg, #8B0000 0%, #6B0000 100%); color: white; border: none; padding: 14px 24px; border-radius: 8px; font-size: 14px; font-weight: 600; cursor: pointer;">
+                                    Copy to Clipboard
+                                </button>
+                                <button onclick="openGmail('${encodeURIComponent(subject)}', '${encodeURIComponent(body)}')" style="flex: 1; background: #4285F4; color: white; border: none; padding: 14px 24px; border-radius: 8px; font-size: 14px; font-weight: 600; cursor: pointer;">
+                                    Open in Gmail
+                                </button>
+                            </div>
+                            <p id="copyStatus" style="text-align: center; margin-top: 12px; font-size: 13px; color: #059669; display: none;">Copied to clipboard!</p>
+                        </div>
+                    </div>
+                </div>
+            `;
+            document.body.appendChild(modal);
+        }
+
+        function closeFallback() {
+            const modal = document.getElementById('fallbackModal');
+            if (modal) modal.remove();
+        }
+
+        function copyEmail() {
+            const subject = document.getElementById('emailSubject').value;
+            const body = document.getElementById('emailBody').value;
+            const fullText = `To: armor@phoneburner.com\nSubject: ${subject}\n\n${body}`;
+
+            navigator.clipboard.writeText(fullText).then(() => {
+                const status = document.getElementById('copyStatus');
+                status.style.display = 'block';
+                setTimeout(() => status.style.display = 'none', 3000);
+            });
+        }
+
+        function openGmail(subject, body) {
+            const gmailUrl = `https://mail.google.com/mail/?view=cm&fs=1&to=armor@phoneburner.com&su=${subject}&body=${body}`;
+            window.open(gmailUrl, '_blank');
+            closeFallback();
         }
 
         // Initialize on load
